project (main) 
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
set(CMAKE_BUILD_TYPE "Debug")
add_executable(${PROJECT_NAME} ${DIR_SRCS})
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread") 

if ("$ENV{G_CONFIG_VEHICLE_MODEL}" STREQUAL "c385f")
    add_definitions(-D C385F)
elseif ("$ENV{G_CONFIG_VEHICLE_MODEL}" STREQUAL "c385ev")
    add_definitions(-D C385EV)
elseif ("$ENV{G_CONFIG_VEHICLE_MODEL}" STREQUAL "c385")
    add_definitions(-D C385EVE)
endif ()